# go2_exam

./: LICENSE  README.md  pyproject.toml
docker/: Dockerfile  docker-celery-entrypoint.sh  docker-compose-0.yml  docker-compose-1-dev.yml  docker-entrypoint.sh
docker/secrets/: README.md  django_secret.txt
orders_api/: manage.py
orders_api/orders_api/: __init__.py  asgi.py  celery.py  models.py  serializers.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
orders_api/orders_api/api/: models.py
orders_api/orders_api/api/migrations/: 0001_initial.py
