[tool.poetry]
name = "orders_api"
version = "0.1.0"
description = "Go2 practical exam"
authors = ["Francis Luna <francisv.luna@gmail.com>"]
readme = "README.md"
packages = [
    { include = "orders_api", from = "orders_api" },
    { include = "orders_api/manage.py"},
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
celery = "^5.3.1"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.5"
black = "^23.7.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
run-app = 'orders_api.manage:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.pylint]
max-line-length = 119
